-issue#1721: Console Side Bar not correct on first login
-issue#1723: die() messages should include PHP_EOF for better logging
-issue#1726: Poor page performance editing a Graphs Graph Items
-issue#1746: Poller with no hosts does not exit until timeout is reached
-issue#1761: Graph Management page shows bogus template names
-issue#1783: Browser Back button still does not working
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-feature#122: Support a Site Branch Type
-feature#289: Allow external nologin access for Realtime Graphs
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1282: Email notification for Automation Network discovery process
-feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
-feature#1399: Allow 'requires' to include version against a plugin
-feature#1400: User settings should have checkbox to enable overriding of global settings
-feature#1422: Automatically select the next unused data input field when clicking add on data input method
-feature#1428: Graphs: Add more information to error image
-feature#1505: Allow Device Edit from Graphs page
-feature#1527: Update Fontawesome from 4.7 to 5.0.10
-feature#1580: Support Drag & Drop for Report Items
-feature#1581: Allow Mass Adding of Graphs to Reports
-feature#1584: Allow theme selection when installing
-feature#1588: Check that PHP can run a test file
-feature#1597: Ensure synchronised files have same attributes as originals
-feature#1593: Allow External links to auto refresh
-feature#1610: Script STDERR logging
-feature#1628: Allow the User to define a initial Network Discovery during Setup