@@ -60,6 +60,7 @@ Cacti CHANGELOG
 -issue#1746: Poller with no hosts does not exit until timeout is reached
 -issue#1761: Graph Management page shows bogus template names
 -issue#1783: Browser Back button still does not working
+-issue#1796: Import: Fixed handling of references to objects not included in file
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
 -issue: Graph List View was not fully responsive
